Ensure scrollbar fits inside track perfectly

--- a/app/staticfiles/css/main.css
+++ b/app/staticfiles/css/main.css
@@ -1141,6 +1141,7 @@ img {
 
 ::-webkit-scrollbar-track {
   background-color: var(--link-color);
+  border-radius: 0.5rem;
 }
 
 /* p {
